--- a/projects/ng-selected-text-tooltip/package.json
+++ b/projects/ng-selected-text-tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-selected-text-tooltip",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Tooltip for selected text with actions. Inspired by medium.com",
   "keywords" :["Angular","selected text","highlights","medium","tooltip","toolbar","action bar"],
   "license" : "MIT",
@@ -10,7 +10,7 @@
   },
   "homepage" :"https://github.com/iderets/ng-selected-text-tooltip",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
+    "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0"
   }
 }
